--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -1,29 +1,18 @@
 <% cache do %>
-	<div>
-	
+	<div class="info-message">	
+		<h1>Manage your job applications <strong>easier</strong></h1>
+		<p>"Keeping track of all those companies and jobs without losing all our notes on
+			a single spreadsheet was a pain. ResQuery is much better."</p>
+		-- Some Random, Hopefully with a title to make them legit
 		
-		<h1>Manage your job applications easier & find out what's really needed</h1>
-			</br>
-		
-		<div class="container-fluid">
-			<div class="row-fluid">
-				<div class="span4">
-					<h2><%= Job.count%> </h2>
-					<h4>Jobs Listed</h4>
-				</div>
-				<div class="span4">
-			 		<h2><%= Company.count %></h2>
-			 		<h4>Top-tier & Mid-tier reputable companies</h4>	
-				</div>
-				<div class="span4">
-					<h4>Representing over 500 of the most sought after
-						internship and graduate spots in Sydney</h4>
-				</div>
-			</div>
-		</div>
-		
-		<br />		
-		<h4>We've just opened up our website for UNSW students.</br> 
-			 Sign up with your zmail now.</h4>
+		<% if false %>
+		<p> Are job apps being too messy?
+			<br />
+			Have an image of the app here
+			<br />
+			<br />
+			ResumeQuery lets you focus on doing your job apps by making finding jobs and
+			managing your apps easy</p>
+		<% end %>
 	</div>
 <% end %>
