--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,11 @@
-<div class="infoBar">
+<div class="info-bar">
 	<div class="container">
 		<div class="row">
 			<div class="span7">
 				<%= render 'devise/registrations/signup_copywrite'%>
 			</div>	
 			<div class="span5">
-				<div class="leftBar pull-right">
+				<div class="left-bar pull-right">
 					<h2>Sign Up</h2>	
 					<%=form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
 						
@@ -16,7 +16,7 @@
 								<%= f.password_field :password_confirmation, :placeholder => "Password Confirmation" %>
 							<% end %>
 						</br>
-						<div><%= f.submit "Sign Up", :class => "btn btn-success" %></div>
+						<div><%= f.submit "Sign Up", :class => "btn btn-info" %></div>
 					<% end %>
 					<% if false %>
 						<%= render "devise/shared/links" %>	
@@ -29,4 +29,29 @@
 		</div>
 	</div>
 </div>
+<% if false %>
+<div class="container">
+	<div class="row">
+		<div class="span4">
+			<h2><%= Job.count%> </h2>
+			<h4>Jobs Listed</h4>
+		</div>
+		<div class="span4">
+	 		<h2><%= Company.count %></h2>
+	 		<h4>Top-tier & Mid-tier reputable companies</h4>	
+		</div>
+		<div class="span4">
+			<h4>Representing over 500 of the most sought after
+				internship and graduate spots in Sydney</h4>
+		</div>	
+	</div>
+	
+	<div class="row">
+		<br />		
+		<h4>We've just opened up our website for UNSW students.</br> 
+			 Sign up with your zmail now.</h4>
+	</div>
+<%end %>
+</div>
+
 
