--- a/app/views/layouts/_left-board.html.erb
+++ b/app/views/layouts/_left-board.html.erb
@@ -32,7 +32,7 @@
 		<%= current_user.email %><br />
 		<br />
 		<%= link_to 'User Settings', edit_user_registration_path %> &nbsp &nbsp &nbsp &nbsp
-		<%= link_to 'Log Out', destroy_user_session_path, :method =>'delete' %>
+		<%= link_to 'Log Out', destroy_user_session_path, :method =>"DELETE" %>
 	</div>
 	<div class="menu-area about-area">
 		<ul class="unstyled">
