hanged some words

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -283,6 +283,7 @@ input {
 }
 
 .info-bar {
+	background-color:$base-green;
 	margin-bottom:$standard-padding;
 	padding:$standard-padding*3 0;
 	background:url('/assets/homepage.jpg'); 
