--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -1,9 +1,9 @@
 <% cache do %>
 	<div class="info-message">	
 		<h1>Manage your job applications <strong>easier</strong></h1>
-		<p>"Keeping track of all those companies and jobs without losing all our notes on
-			a single spreadsheet was a pain. ResQuery is much better."</p>
-		-- Some Random, Hopefully with a title to make them legit
+		<p>"Keeping track of all those companies and jobs without losing all our notes -on
+			a single spreadsheet- was a pain. ResQuery is much better."</p>
+		-- Someone, Y Director at Z Society & BCom/Law Student at UNSW
 		
 		<% if false %>
 		<p> Are job apps being too messy?
