--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,7 +16,7 @@
 								<%= f.password_field :password_confirmation, :placeholder => "Password Confirmation" %>
 							<% end %>
 						</br>
-						<div><%= f.submit "Sign Up", :class => "btn btn-info" %></div>
+						<div><%= f.submit "Start managing job apps easier", :class => "btn btn-info" %></div>
 					<% end %>
 					<% if false %>
 						<%= render "devise/shared/links" %>	
