--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -309,3 +309,16 @@ input {
 		width:100% ;
 	}
 }
+
+
+.wrapper {
+	height:55px;
+	 width:55px; 
+	border-radius:55px; 
+
+	overflow:hidden;
+}
+
+.info-subtext {
+	padding-left:20px;
+}
