--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -1,11 +1,30 @@
 <% cache do %>
 	<div class="info-message">	
-		<h1>Manage your job applications <strong>easier</strong></h1>
+		<h1>Manage your job applications <strong>easier</strong></h1>		
+		<br />
 		<p>"Keeping track of all those companies and jobs without losing all our notes -on
 			a single spreadsheet- was a pain. ResQuery is much better."</p>
-		-- Someone, Y Director at Z Society & BCom/Law Student at UNSW
+			<br />
+			<div class="row-fluid">
+				<div class="span1">
+					<div class="wrapper">
+					<%= link_to image_tag('spacecamp.jpg'), '#', :class => "wrapper"%>
+					</div>
+				</div>
+				
+				<div class="span8 info-subtext">
+					Someone
+					 is the Y Director at Z Society <br /> that studies BCom/Law at UNSW
+				</div>
+			</div>
+
+		
 		
 		<% if false %>
+		<br />Have their face as a circle here too!
+		<br />Another line: "You want to be on ResQuery"
+		
+		
 		<p> Are job apps being too messy?
 			<br />
 			Have an image of the app here
