--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,18 +1,16 @@
-<div class="infoBar">
+<div class="info-bar">
 	<div class="container">
 		<div class="row">
-			<h3>Forgot your password?</h3>
-
-			<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-			  <%= devise_error_messages! %>
-
-			  <div><%= f.label :email %><br />
-			  <%= f.email_field :email, :autofocus => true %></div>
-
-			  <div><%= f.submit "Send me reset password instructions", :class=>"btn" %></div>
-			<% end %>
-
-			<%= render "devise/shared/links" %>
+			<div class="span6">
+				<h3>Forgot your password?</h3>
+				<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+				  <%= devise_error_messages! %>
+				  <div>
+				  <%= f.email_field :email, :autofocus => true, :placeholder => "Email" %></div>
+				  <div><%= f.submit "Send me reset password instructions", :class=>"btn btn-info" %></div>
+				<% end %>
+				<%= render "devise/shared/links" %>
+			</div>
 		</div>
 	</div>
 </div>
