--- a/app/views/dashboards/dashboard.js.erb
+++ b/app/views/dashboards/dashboard.js.erb
@@ -1,4 +1,6 @@
+jQuery(document).ready(function() {
 
+	
 	
 	//Yeah if you're reading this code - sorry for the eyesore. -Pash	
 	<% @appList.each do |apps| %>
@@ -40,3 +42,4 @@
 		});
 		
 	<% end %>
+});
