--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -1,24 +1,37 @@
+
+
+
 <% cache do %>
 	<div class="info-message">	
-		<h1>Manage your job applications <strong>easier</strong></h1>		
-		<br />
-		<p>"Keeping track of all those companies and jobs without losing all our notes -on
-			a single spreadsheet- was a pain. ResQuery is much better."</p>
+		
+		
+		<div class="info-text" id="content-1">
+			
+			<h1>Manage your job applications <strong>easier</strong></h1>
+			<br />
+			<p>"Keeping track of all those companies and jobs without losing all our notes -on
+				a single spreadsheet- was a pain. ResQuery is much better."</p>
 			<br />
 			<div class="row-fluid">
 				<div class="span1">
 					<div class="wrapper">
 					<%= link_to image_tag('spacecamp.jpg'), '#', :class => "wrapper"%>
 					</div>
-				</div>
-				
+				</div>				
 				<div class="span8 info-subtext">
-					Someone
-					 is the Y Director at Z Society <br /> that studies BCom/Law at UNSW
+					Jane is the Y Director at Z Society <br /> and studies BCom/Law at UNSW
 				</div>
 			</div>
-
+		</div>
 		
+		<div class="info-text hide" id="content-2">
+			<h1>We list all the best graduate
+				 and internship jobs available for you</h1>
+				<br />
+			<p>We don't profit from employers so we can put students first.
+				This means we don't just list the companies that have paid us, we list all that
+				we can find for you</p>
+		</div>
 		
 		<% if false %>
 		<br />Have their face as a circle here too!
