--- a/app/views/layouts/_left-board.html.erb
+++ b/app/views/layouts/_left-board.html.erb
@@ -37,7 +37,9 @@
 	<div class="menu-area about-area">
 		<ul class="unstyled">
 			<li><i class="icon-comment"></i> &nbsp Contact Us</li>
-			<li><i class="icon-user"></i> &nbsp About ResumeQuery</li>
+			<%= link_to about_path do %>
+				<li><i class="icon-user"></i> &nbsp About ResumeQuery</li>
+			<% end %>
 			
 		</ul>
 	</div>
