--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -36,15 +36,15 @@
 			<div class="row-fluid">
 				<div class="span4">
 					<h2><%= Company.count%></h2>
-					Reputable<br/> companies listed
+					<p>Reputable<br/> companies listed</p>
 				</div>
 				<div class="span4">
 					<h2><%= Job.count %></h2>
-					Active jobs open for students
+					<p>Active jobs open for students</p>
 				</div>
 				<div class="span4">
 					<h2> 500  </h2>
-					Number of grad jobs & internships in Australia
+					<p>Number of grad jobs & internships in Australia</p>
 				</div>
 			</div>
 
