--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -22,12 +22,12 @@
 		</div>
 		
 		<div class="info-text hide" id="content-2">
-			<h1>We list all the best graduate
-				 and internship jobs available for you</h1>
+			<h1>Save time by finding <span style="text-decoration:underline">all</span> the best grad
+				 and internship jobs available</h1>
 				<br />
 			<p>We don't profit from employers so we can put students first.
 				This means we don't just list the companies that have paid us, we list all that
-				we can find for you</p>
+				we can find for <strong>you</strong></p>
 		</div>
 		
 		<div class="info-text hide center-alignment" id="content-3">
