--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -27,7 +27,7 @@
 				<br />
 			<p>We don't profit from employers so we can put students first.
 				This means we don't just list the companies that have paid us, we list all that
-				we can find for <strong>you</strong></p>
+				we can find <strong>you</strong></p>
 		</div>
 		
 		<div class="info-text hide center-alignment" id="content-3">
