--- a/app/views/notes/create.js.erb
+++ b/app/views/notes/create.js.erb
@@ -1,5 +1,5 @@
 if ( "<%=@note.kind%>" == "comment") {
-	$('#comment-area-<%=@note.app_list_id%>').append("<%= j render ('notes/comment')%>");
+	$('#comment-area').append("<%= j render ('notes/comment')%>");
 } 
 else if ("<%=@note.kind%>"=="hr") {
 	$('#hr-area-<%=@note.app_list_id%>').append("<%= @note.info %><br />");
