--- a/app/views/layouts/_left-board.html.erb
+++ b/app/views/layouts/_left-board.html.erb
@@ -8,16 +8,16 @@
 	<div class="menu-area">
 		<ul class="unstyled">
 			<%= link_to root_path do %>
-				<li><i class="icon-pencil"></i> &nbsp Apps Dashboard</li>
+				<li><i class="icon-pencil icon-white"></i> &nbsp Apps Dashboard</li>
 			<% end %>
 			<%= link_to jobs_path do %>
-				<li><i class="icon-briefcase"></i> &nbsp  Jobs </li>
+				<li><i class="icon-briefcase icon-white"></i> &nbsp  Jobs </li>
 			<% end %>
 			<%= link_to companies_path do %>
-				<li><i class="icon-certificate"></i> &nbsp Companies </li>
+				<li><i class="icon-certificate icon-white"></i> &nbsp Companies </li>
 			<% end %>
-			<li><i class="icon-book"></i> &nbsp Knowledge Base</li>
-			<li><i class="icon-wrench"></i> &nbsp Suggestions & Bugs</li>
+			<li><i class="icon-book icon-white"></i> &nbsp Knowledge Base</li>
+			<li><i class="icon-wrench icon-white"></i> &nbsp Suggestions & Bugs</li>
 		</ul>
 	</div>
 	
@@ -36,9 +36,9 @@
 	</div>
 	<div class="menu-area about-area">
 		<ul class="unstyled">
-			<li><i class="icon-comment"></i> &nbsp Contact Us</li>
+			<li><i class="icon-comment icon-white"></i> &nbsp Contact Us</li>
 			<%= link_to about_path do %>
-				<li><i class="icon-user"></i> &nbsp About ResumeQuery</li>
+				<li><i class="icon-user icon-white"></i> &nbsp About ResumeQuery</li>
 			<% end %>
 			
 		</ul>
