--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -8,7 +8,7 @@
 		</div>
 	<% else %>
 
-		<div class="app-title pad-top">
+		<div class="app-title pad-bottom">
 			<h4>Your Dashboard</h4>
 		</div>
 		
