Articles model / controller + cancan changes

--- a/app/views/dashboards/admin.html.erb
+++ b/app/views/dashboards/admin.html.erb
@@ -23,7 +23,8 @@
 					<td><%= user.first_name %> </td>
 					<td><%= user.email %> </td>
 					<td><%= user.mobile_number %> </td>
-					<td><%= user.id %> 
+					<td><%= user.id %>  </td>
+	
 				</tr>
 				<% end %>
 				</table>
