--- a/app/views/layouts/_left-board.html.erb
+++ b/app/views/layouts/_left-board.html.erb
@@ -16,7 +16,9 @@
 			<%= link_to companies_path do %>
 				<li><i class="icon-certificate icon-white"></i> &nbsp Companies </li>
 			<% end %>
-			<li><i class="icon-book icon-white"></i> &nbsp Knowledge Base</li>
+			<%= link_to knowledgebase_path do %>
+				<li><i class="icon-book icon-white"></i> &nbsp Knowledge Base</li>
+			<% end %>	
 			<li><i class="icon-wrench icon-white"></i> &nbsp Suggestions & Bugs</li>
 		</ul>
 	</div>
