--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Articles#index</h1>
-<p>Find me in app/views/articles/index.html.erb</p>
+<h1>Knowledge Base </h1></br>
+
+
+<h4><b> Investing Banking <b> </h4>
+
+<li> Manual Link to first article </li>
