--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -9,22 +9,15 @@
 	</div>	
 	<div class="row">
 		<div class="span6 jobIndex">
-			
 			<ul class="unstyled">
-				<% @allCompanies.each do |c| %>
-					<%= link_to c do %>
-						<span class="big-font"><strong><%= c.name %></strong> </span><br />
-						<%= c.industry%> -
-						<% if c.has_number_of_jobs != 0 %>
-							 <%= c.jobs.count %> Job Opportunities
-						<% end %><br />
-					<% end %>
-						<%= simple_format( (truncate((c.info), :length=>170)) ) %>
-						<br />
+
+				<%= form_tag companies_path, :method => 'get' do %>
+				  <p>
+				    <%= text_field_tag :search, params[:search] %>
+				    <%= submit_tag "Search", :name => nil %>
+				  </p>
+					<%= render 'companies' %></div>
 				<% end %>
-				
-				<%= will_paginate @allCompanies %>
-		</div>
-		
+			</div>
 	</div>
-</div>
+</div>				
