--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -2,8 +2,11 @@
 	<div class="row">
 		<div class="span12 jobIndex">
 			<h3>All Job Opportunities</h3>
+			
+			<%= link_to "Advanced Search", new_search_path %>
+			
 			<ul class="unstyled">
-				<% @job.each do |j| %>
+				<% @jobs.each do |j| %>
 					<%= link_to j do %>
 						<li><strong><%= j.find_company.name %></strong> - <%= j.name %> - 
 						<span class="pull-right"><%= j.show_due_date%></span>
