--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -3,7 +3,7 @@
 		<div class="span12">
 			<%= form_for @jobs, :as => :jobs do |f| %>
 				<%= f.text_field :name, :placeholder => "Name" %></br>
-				<%= f.text_field :discipline, :placeholder => "Discipline" %></br>
+				<%= f.collection_select :category_id, Category.order(:discipline), :id, :discipline, include_blank: true %></br>
 				<%= f.text_area :info, :placeholder => "Information" %></br>
 				<%= f.text_field :link, :placeholder => "Website Link in www.something.com form" %></br>
 				<%= f.text_field :due_date, :placeholder => "Date, insert as DD/MM/YYYY" %></br>
