--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -26,7 +26,7 @@
 				<hr>
 			
 				
-				Discipline: <%= @job.discipline %></br>
+				Discipline: <%= Category.find(@job.category_id).discipline %></br>
 				HR Contact: <%= @job.relevant_hr_email %></br>
 				<% if @job.has_website? %>
 					<%= link_to "Official Link", "http://#{@job.link}" %></br></br>
