add roles (similar to categories) + fixed advanced search

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -36,8 +36,7 @@
 					<%= f.text_field :info, :placeholder => "Information" %>
 					<%= f.text_field :due_date, :placeholder => "Date, insert as DD/MM/YYYY"%>
 					<%= f.hidden_field :id, :value => params[:id] %>
-					<%= f.select :role, [['Graduate'], ['Internship'],
-	  				                       ['Clerkship']]%>
+					<%= f.collection_select :role_id, Role.order(:role), :id, :role, include_blank: true %>
 					<%= f.submit %>
 				<% end %>
 			<% end %>
