--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -8,8 +8,7 @@
 				<%= f.text_field :link, :placeholder => "Website Link in www.something.com form" %></br>
 				<%= f.text_field :due_date, :placeholder => "Date, insert as DD/MM/YYYY" %></br>
 				<%= f.hidden_field :id, :value => params[:id] %></br>
-				<%= f.select :role, [['Graduate'], ['Internship'],
-  				                       ['Clerkship']],{}%> </br>
+				<%= f.collection_select :role_id, Role.order(:role), :id, :role, include_blank: true %></br>
 				<%= f.submit %>
 			<% end %>
 
@@ -18,3 +17,4 @@
 		</div>
 	</div>
 </div>
+
