--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -1,12 +1,9 @@
 <%= form_for @search do |f| %>
   <div class="field">
-    <%= f.label :discipline %><br />
-    <%= f.text_field :discipline %>
+	<%= f.collection_select :role_id, Role.order(:role), :id, :role, include_blank: true %>
+
   </div>
   <div class="field">
-    <%= f.label :role %><br />
-	<%= f.select :role, [['Graduate'], ['Internship'],
-	                       ['Clerkship']],{}%>
-  </div>
+   	<%= f.collection_select :category_id, Category.order(:discipline), :id, :discipline, include_blank: true %></br>  </div>
   <div class="actions"><%= f.submit "Search" %></div>
 <% end %>
